<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoboRace</string>
    <string name="welcome">Welcome NAMEPLACEHOLDER, please choose a robot</string>

    <string name="action_settings">Settings</string>
    <string name="speed">0</string>
    <string name="label_speed">Speed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_setName">Please type in your name:</string>
    <string name="button_submit">submit</string>
    <string name="title_activity_select_robo">SelectRobo</string>
    <string name="Control_Left_Right" />
    <string name="Control_Button_A" />
    <string name="Control_Button_B">Das ist der Button B</string>
    <string name="DSCRP_Background_Menu">Background vom Start Select Bereich</string>
    <string name="DSCRP_Start_Button">Start Button</string>
    <string name="DSCRP_Select_Button">Select Button</string>
    <string name="DSCRP_Menu_Gear">Menü Rädchen</string>
    <string name="DSCRP_Tacho">Tacho</string>
    <string name="DSCRP_tachometer">Dies ist der Tachometer der im Hintergrund die Geschwindigkeit zeigen soll</string>
    <string name="title_results_activity">Ergebnisse</string>
    <string name="results_names_title">Spieler</string>
    <string name="results_times_title">Zeit</string>
    <string name="results_placement_title">Platz</string>
    <string name="label_ipAdress">Server IP-Adresse</string>
    <string name="text_ipAdress">10.90.171.241</string>
    <string name="backToLobbyButton">Zurück zur Lobby</string>

</resources>
